--- a/src/input.css
+++ b/src/input.css
@@ -1,1 +1,8 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Boldonse&display=swap');
+@theme{
+    --font-Monserrat: 'Montserrat', sans-serif;
+    --font-Boldonse: 'Boldonse', sans-serif;
+
+}
